--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@typescript-eslint/parser": "^5.59.1",
     "babel-loader": "^9.1.2",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.39.0",
+    "express": "^4.18.2",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
