--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "babel-loader": "^9.1.2",
@@ -36,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stream-http": "^3.2.0",
+    "styled-components": "^5.3.10",
     "typescript": "^5.0.4",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2",
