--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build": "yarn build:client && yarn build:server",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "type-check": "tsc --noEmit --jsx react",
-    "test:server": "jest",
+    "test:server": "jest --config jest.config.server.js",
+    "test:client": "jest --config jest.config.client.js",
+    "test": "yarn test:server & yarn test:client",
     "hi": "jest /Users/xackal/develop/nanoGlobal/__tests__/server.test.ts"
   },
   "dependencies": {
@@ -49,6 +51,8 @@
     "webpack-dev-server": "^4.13.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
@@ -59,6 +63,8 @@
     "@types/react-dom": "^18.2.1",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-environment-jsdom-sixteen": "^2.0.0",
     "jsdoc": "^4.0.2",
     "stream-browserify": "^3.0.0",
     "supertest": "^6.3.3",
@@ -69,16 +75,5 @@
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.5.0",
     "util": "^0.12.5"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>"
-    ],
-    "testMatch": [
-      "**/__tests__/**/*.+(ts|js)"
-    ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    }
   }
 }
