--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.18.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@types/react-paginate": "^7.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "babel-loader": "^9.1.2",
@@ -43,6 +44,7 @@
     "pkill": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.10",
     "typescript": "^5.0.4",
@@ -66,6 +68,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "jsdoc": "^4.0.2",
+    "msw": "^1.2.1",
     "stream-browserify": "^3.0.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
