--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "resolveJsonModule": true,
       "jsx": "react"
     },
-    "include": ["./src/**/*", "__tests__"],
-    "exclude": ["node_modules", "dist"]
+    // "include": ["./src/**/*", "__tests__"],
+    "include": ["./src/**/*"],
+    "exclude": ["node_modules", "dist",  "__tests__"]
 }
