--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.11.1",
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.10",
     "typescript": "^5.0.4",
